Update deprecated Java syntax call sites